Update feature swagger
