# api-rest/storage/api-docs/api-docs.yaml
@@ -41,6 +41,17 @@ paths:
       responses:
         200:
           description: 'Successfully logged in'
+          content:
+            application/json:
+              schema:
+                properties:
+                  message:
+                    type: string
+                    example: 'Successfully logged in'
+                  token:
+                    type: string
+                    example: eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiIsImp0aSI6IjEyMzQ1Njc4OTAifQ==
+                type: object
         403:
           description: 'The provided credentials are incorrect'
         422:
@@ -63,18 +74,18 @@ paths:
                     type: array
                     items:
                       properties:
-                        nickname:
+                        name:
                           type: string
-                          example: player1
+                          example: John
                         games_won_percentage:
                           type: number
                           format: float
-                          example: 75
+                          example: 50
+                        average_games_won_percentage:
+                          type: number
+                          format: float
+                          example: 50
                       type: object
-                  average_percentage_of_games_won:
-                    type: number
-                    format: float
-                    example: 50
                 type: object
         401:
           description: Unauthorized
@@ -116,6 +127,14 @@ paths:
       responses:
         201:
           description: 'Successfully registered'
+          content:
+            application/json:
+              schema:
+                properties:
+                  message:
+                    type: string
+                    example: 'Successfully registered'
+                type: object
         422:
           description: 'Validation errors'
   '/players/{id}/games':
@@ -141,23 +160,19 @@ paths:
               schema:
                 properties:
                   data:
-                    type: array
-                    items:
-                      properties:
-                        dice_1:
-                          type: integer
-                          example: 3
-                        dice_2:
-                          type: integer
-                          example: 4
-                        result:
-                          type: string
-                          example: won
-                      type: object
-                  player_won_percentage:
-                    type: number
-                    format: float
-                    example: 50
+                    properties:
+                      name:
+                        type: string
+                        example: John
+                      games_won_percentage:
+                        type: number
+                        format: float
+                        example: 50
+                      average_games_won_percentage:
+                        type: number
+                        format: float
+                        example: 50
+                    type: object
                 type: object
         401:
           description: Unauthorized
@@ -185,12 +200,15 @@ paths:
             application/json:
               schema:
                 properties:
-                  dice_1:
-                    type: integer
-                    example: 3
-                  dice_2:
-                    type: integer
-                    example: 4
+                  data:
+                    properties:
+                      dice_1:
+                        type: integer
+                        example: 3
+                      dice_2:
+                        type: integer
+                        example: 4
+                    type: object
                 type: object
         401:
           description: Unauthorized
@@ -331,21 +349,7 @@ paths:
               type: object
       responses:
         200:
-          description: 'Updated player with new nickname'
-          content:
-            application/json:
-              schema:
-                properties:
-                  data:
-                    properties:
-                      id:
-                        type: integer
-                        example: 1
-                      nickname:
-                        type: string
-                        example: new_nickname
-                    type: object
-                type: object
+          description: 'Nickname updated successfully'
         401:
           description: Unauthorized
         422:
@@ -354,6 +358,16 @@ paths:
         -
           bearerAuth: []
 components:
+  schemas:
+    Game:
+      properties:
+        dice_1:
+          type: integer
+          example: 1
+        dice_2:
+          type: integer
+          example: 2
+      type: object
   securitySchemes:
     bearerAuth:
       type: http
